--- a/EshopMVC/Views/Home/Index.cshtml
+++ b/EshopMVC/Views/Home/Index.cshtml
@@ -2,16 +2,19 @@
 @{
     ViewBag.Title = "Trang chủ";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var slide = (List<Database.Entity.Slide>)ViewBag.Slide;
 }
 
 <!-- Home slider -->
 <section class="small-section small-slider pt-res-0">
     <div class="container">
         <div class="slider-animate home-slider">
+            @foreach (var item in slide)
+            {
             <div>
                 <div class="home">
-                    <img src="~/Content/assets/images/electronics/home-slider/1.jpg" alt=""
-                         class="bg-img blur-up lazyload">
+                    <img src="~/Content/Slide/@item.ImageName" alt=""
+                         class="bg-img blur-up lazyload" />
                     <div class="container">
                         <div class="row">
                             <div class="col">
@@ -32,30 +35,7 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <div class="home">
-                    <img src="~/Content/assets/images/electronics/home-slider/1.jpg" alt=""
-                         class="bg-img blur-up lazyload">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col">
-                                <div class="slider-contain px-padding">
-                                    <div>
-                                        <h4 class="animated" data-animation-in="fadeInUp">save 30%</h4>
-                                        <h1 class="animated" data-animation-in="fadeInUp" data-delay-in="0.3">
-                                            Must have
-                                        </h1><a href="#" class="btn btn-solid animated"
-                                                data-animation-in="fadeInUp" data-delay-in="0.5">
-                                            shop
-                                            now
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </section>
