--- a/EshopMVC/Views/Shared/_Layout.cshtml
+++ b/EshopMVC/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
     <!-- Theme css -->
     <link rel="stylesheet" type="text/css" href="~/Content/assets/css/style.css">
 
+    @RenderSection("css",false)
 
 </head>
 
@@ -82,7 +83,7 @@
                                     </a>
                                 </div>
                                 <div class="brand-logo">
-                                    <a href="index.html">
+                                    <a href="/">
                                         <img src="~/Content/assets/images/icon/logo/29.png"
                                              class="img-fluid blur-up lazyload" alt="">
                                     </a>
@@ -332,7 +333,7 @@
                                 </a>
                             </div>
                             <div class="brand-logo">
-                                <a href="index.html">
+                                <a href="/">
                                     <img src="~/Content/assets/images/icon/logo/29.png"
                                          class="img-fluid blur-up lazyload" alt="">
                                 </a>
@@ -480,25 +481,25 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-3">
-                            <div class="category-menu d-none d-xl-block h-100">
-                                <div id="toggle-sidebar" class="toggle-sidebar">
-                                    <i class="fa fa-bars sidebar-bar"></i>
-                                    <h5 class="mb-0">danh mục sản phẩm</h5>
-                                </div>
-                            </div>
-                            <div class="sidenav fixed-sidebar marketplace-sidebar">
-                                <nav>
-                                    <div>
-                                        <div class="sidebar-back text-start d-block d-xl-none">
-                                            <i class="fa fa-angle-left pe-2" aria-hidden="true"></i> Back
-                                        </div>
-                                    </div>
-                                    <ul id="sub-menu" class="sm pixelstrap sm-vertical ">
-                                        @{Html.RenderAction("ProductCategory", "ProductCategory"); }
-                                    </ul>
-                                </nav>
+                        <div class="category-menu d-none d-xl-block h-100">
+                            <div id="toggle-sidebar" class="toggle-sidebar">
+                                <i class="fa fa-bars sidebar-bar"></i>
+                                <h5 class="mb-0">danh mục sản phẩm</h5>
                             </div>
                         </div>
+                        <div class="sidenav fixed-sidebar marketplace-sidebar">
+                            <nav>
+                                <div>
+                                    <div class="sidebar-back text-start d-block d-xl-none">
+                                        <i class="fa fa-angle-left pe-2" aria-hidden="true"></i> Back
+                                    </div>
+                                </div>
+                                <ul id="sub-menu" class="sm pixelstrap sm-vertical ">
+                                    @{Html.RenderAction("ProductCategory", "ProductCategory"); }
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
                     <div class="col-xl-9">
                         <div class="main-nav-center">
                             @{ Html.RenderAction("TopMenu", "Home"); }
@@ -510,6 +511,133 @@
     </header>
     <!-- header end -->
     @RenderBody()
+    <!-- footer section start -->
+    <footer class="dark-footer footer-style-1">
+        <section class="section-b-space darken-layout">
+            <div class="container">
+                <div class="row footer-theme partition-f">
+                    <div class="col-lg-4 col-md-6 sub-title">
+                        <div class="footer-title footer-mobile-title">
+                            <h4>about</h4>
+                        </div>
+                        <div class="footer-contant">
+                            <div class="footer-logo"><img src="~/Content/assets/images/icon/logo/f10.png" alt=""></div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut labore
+                            </p>
+                            <ul class="contact-list">
+                                <li>
+                                    <i class="fa fa-map-marker"></i>Multikart Demo Store, Demo store India 345-659
+                                </li>
+                                <li><i class="fa fa-phone"></i>Call Us: 123-456-7898</li>
+                                <li><i class="fa fa-envelope-o"></i>Email Us: <a href="#">Support@Fiot.com</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-6">
+                        <div class="sub-title">
+                            <div class="footer-title">
+                                <h4>my account</h4>
+                            </div>
+                            <div class="footer-contant">
+                                <ul>
+                                    <li><a href="#">mens</a></li>
+                                    <li><a href="#">womens</a></li>
+                                    <li><a href="#">clothing</a></li>
+                                    <li><a href="#">accessories</a></li>
+                                    <li><a href="#">featured</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-6">
+                        <div class="sub-title">
+                            <div class="footer-title">
+                                <h4>information</h4>
+                            </div>
+                            <div class="footer-contant">
+                                <ul>
+                                    <li><a href="#">shipping & return</a></li>
+                                    <li><a href="#">secure shopping</a></li>
+                                    <li><a href="#">gallary</a></li>
+                                    <li><a href="#">affiliates</a></li>
+                                    <li><a href="#">contacts</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="sub-title">
+                            <div class="footer-title">
+                                <h4>follow us</h4>
+                            </div>
+                            <div class="footer-contant">
+                                <p class="mb-cls-content">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                    do eiusmod tempor incididunt
+                                    ut labore
+                                </p>
+                                <form class="form-inline">
+                                    <div class="form-group me-sm-3 mb-2">
+                                        <label for="inputPassword2" class="sr-only">Password</label>
+                                        <input type="password" class="form-control" id="inputPassword2"
+                                               placeholder="Enter Your Email">
+                                    </div>
+                                    <button type="submit" class="btn btn-solid mb-2">subscribe</button>
+                                </form>
+                                <div class="footer-social">
+                                    <ul>
+                                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="sub-footer dark-subfooter">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-md-6 col-sm-12">
+                        <div class="footer-end">
+                            <p>
+                                <i class="fa fa-copyright" aria-hidden="true"></i> 2017-18 themeforest powered by
+                                pixelstrap
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-md-6 col-sm-12">
+                        <div class="payment-card-bottom">
+                            <ul>
+                                <li>
+                                    <a href="#"><img src="~/Content/assets/images/icon/visa.png" alt=""></a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="~/Content/assets/images/icon/mastercard.png" alt=""></a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="~/Content/assets/images/icon/paypal.png" alt=""></a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="~/Content/assets/images/icon/american-express.png" alt=""></a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="~/Content/assets/images/icon/discover.png" alt=""></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer section end -->
     <!--modal popup start-->
     <div class="modal fade bd-example-modal-lg theme-modal" id="exampleModal" tabindex="-1" role="dialog"
          aria-hidden="true">
@@ -624,13 +752,6 @@
     <!-- theme setting -->
     <div class="theme-settings">
         <ul>
-            <li class="demo-li">
-                <a href="javascript:void(0)" onclick="openSetting()">
-                    <div class="setting-sidebar" id="setting-icon">
-                        <h5>50+ <br>demo</h5>
-                    </div>
-                </a>
-            </li>
             <li>
                 <div class="dark-btn">Dark</div>
             </li>
@@ -1276,6 +1397,7 @@
     <script src="~/Content/assets/js/script.js"></script>
     <script src="~/Content/assets/js/custom-slick-animated.js"></script>
 
+    @RenderSection("js", false)
 
     <script>
         $(window).on('load', function () {
