--- a/EshopMVC/Views/Shared/_Layout.cshtml
+++ b/EshopMVC/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     <!-- Theme css -->
     <link rel="stylesheet" type="text/css" href="~/Content/assets/css/style.css">
 
-    @RenderSection("css",false)
+    @RenderSection("css", false)
 
 </head>
 
@@ -120,7 +120,7 @@
                                                     <img src="~/Content/assets/images/icon/cart.png"
                                                          class="img-fluid blur-up lazyload" alt=""> <i class="ti-shopping-cart"></i>
                                                 </div>
-                                                <span class="cart_qty_cls">2</span>
+                                                <span class="cart_qty_cls">0</span>
                                             </li>
                                         </ul>
                                     </div>
@@ -407,68 +407,7 @@
                                                 </ul>
                                             </div>
                                         </li>
-                                        <li class="onhover-div mobile-cart">
-                                            <div>
-                                                <img src="~/Content/assets/images/icon/cart.png"
-                                                     class="img-fluid blur-up lazyload" alt=""> <i class="ti-shopping-cart"></i>
-                                            </div>
-                                            <span class="cart_qty_cls">2</span>
-                                            <ul class="show-div shopping-cart">
-                                                <li>
-                                                    <div class="media">
-                                                        <a href="#">
-                                                            <img alt="" class="me-3"
-                                                                 src="~/Content/assets/images/fashion/product/1.jpg">
-                                                        </a>
-                                                        <div class="media-body">
-                                                            <a href="#">
-                                                                <h4>item name</h4>
-                                                            </a>
-                                                            <h4><span>1 x $ 299.00</span></h4>
-                                                        </div>
-                                                    </div>
-                                                    <div class="close-circle">
-                                                        <a href="#">
-                                                            <i class="fa fa-times"
-                                                               aria-hidden="true"></i>
-                                                        </a>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <div class="media">
-                                                        <a href="#">
-                                                            <img alt="" class="me-3"
-                                                                 src="~/Content/assets/images/fashion/product/2.jpg">
-                                                        </a>
-                                                        <div class="media-body">
-                                                            <a href="#">
-                                                                <h4>item name</h4>
-                                                            </a>
-                                                            <h4><span>1 x $ 299.00</span></h4>
-                                                        </div>
-                                                    </div>
-                                                    <div class="close-circle">
-                                                        <a href="#">
-                                                            <i class="fa fa-times"
-                                                               aria-hidden="true"></i>
-                                                        </a>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <div class="total">
-                                                        <h5>subtotal : <span>$299.00</span></h5>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <div class="buttons">
-                                                        <a href="cart.html" class="view-cart">
-                                                            view
-                                                            cart
-                                                        </a> <a href="#" class="checkout">checkout</a>
-                                                    </div>
-                                                </li>
-                                            </ul>
-                                        </li>
+                                        @{ Html.RenderAction("HeaderCart", "Home");}
                                     </ul>
                                 </div>
                             </div>
@@ -678,78 +617,7 @@
             </div>
         </div>
     </div>
-    <!--modal popup end-->
-    <!-- Quick-view modal popup start-->
-    <div class="modal fade bd-example-modal-lg theme-modal" id="quick-view" tabindex="-1" role="dialog"
-         aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-            <div class="modal-content quick-view-modal">
-                <div class="modal-body">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <div class="row">
-                        <div class="col-lg-6 col-xs-12">
-                            <div class="quick-view-img">
-                                <img src="~/Content/assets/images/pro3/1.jpg" alt=""
-                                     class="img-fluid blur-up lazyload">
-                            </div>
-                        </div>
-                        <div class="col-lg-6 rtl-text">
-                            <div class="product-right">
-                                <h2>Women Pink Shirt</h2>
-                                <h3>$32.96</h3>
-                                <ul class="color-variant">
-                                    <li class="bg-color1"></li>
-                                    <li class="bg-color3"></li>
-                                </ul>
-                                <div class="border-product">
-                                    <h6 class="product-title">product details</h6>
-                                    <p>
-                                        Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium
-                                        doloremque laudantium
-                                    </p>
-                                </div>
-                                <div class="product-description border-product">
-                                    <div class="size-box">
-                                        <ul>
-                                            <li class="active"><a href="javascript:void(0)">s</a></li>
-                                            <li><a href="javascript:void(0)">m</a></li>
-                                            <li><a href="javascript:void(0)">l</a></li>
-                                            <li><a href="javascript:void(0)">xl</a></li>
-                                        </ul>
-                                    </div>
-                                    <h6 class="product-title">quantity</h6>
-                                    <div class="qty-box">
-                                        <div class="input-group">
-                                            <span class="input-group-prepend">
-                                                <button type="button"
-                                                        class="btn quantity-left-minus" data-type="minus" data-field="">
-                                                    <i class="ti-angle-left"></i>
-                                                </button>
-                                            </span>
-                                            <input type="text" name="quantity" class="form-control input-number"
-                                                   value="1"> <span class="input-group-prepend">
-                                                <button type="button"
-                                                        class="btn quantity-right-plus" data-type="plus" data-field="">
-                                                    <i class="ti-angle-right"></i>
-                                                </button>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="product-buttons">
-                                    <a href="#" class="btn btn-solid">add to cart</a> <a href="#" class="btn btn-solid">view detail</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Quick-view modal popup end-->
-    <!-- theme setting -->
+    <!--modal popup end-->    <!-- theme setting -->
     <div class="theme-settings">
         <ul>
             <li>
@@ -1396,6 +1264,9 @@
     <script src="~/Content/assets/js/theme-setting.js"></script>
     <script src="~/Content/assets/js/script.js"></script>
     <script src="~/Content/assets/js/custom-slick-animated.js"></script>
+
+    <!--Add item to Cart-->
+    <script src="~/Content/assets/js/addtocart.js"></script>
 
     @RenderSection("js", false)
 
